# pipeline-etl-real-time-IA

./: .env  README.md  pyproject.toml
agents-ia/: main.py
pipeline/: main.py
