[project]
name = "pipeline-etl-real-time-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Souza",email = "rafasansou1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "agno (>=1.5.0,<2.0.0)",
    "groq (>=0.24.0,<0.25.0)",
    "duckduckgo-search (>=8.0.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
